# fnaf-api

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  mise.toml
collection/: faces.yml  opencollection.yml
collection/environments/: localhost.yml  production.yml
collection/fnafify/: fallback-image.yml  folder.yml  local-img.yml
collection/fnafify/filetypes/: avif.yml  bmp.yml  folder.yml  gif.yml  ico.yml  jpg.yml  pbm.yml  png.yml  qoi.yml  tga.yml  tiff.yml  webp.yml
collection/fnafify/layouts/: bot-only.yml  folder.yml  mid-bot.yml  mid-only.yml  top-bot.yml  top-mid-bot.yml  top-mid.yml  top-only.yml
collection/fnafify/sizes/: 1000x1000.yml  1080x1920.yml  1920x1080.yml  200x300.yml  300x800.yml  600x900.yml  800x800.yml  folder.yml
collection/fnafify/texts/: 1526860983794925608.yml  folder.yml
src/: fnaf.rs  generate.rs  interactions.rs  main.rs
