[package]
name = "fnaf-api"
version = "0.2.7"
edition = "2024"

[dependencies]
imageproc = "0.27.0"
image = "0.25.10"
ab_glyph = "0.2.32"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
reqwest = "0.13.4"

# builds dependencies with the release profile
[profile.dev.package."*"]
opt-level = 3
