[package]
name = "fnaf-api"
version = "0.3.0"
edition = "2024"
description = "api for fetching fnaf emojis"
documentation = "https://github.com/ico-interactive/fnaf-api"
homepage = "https://github.com/ico-interactive/fnaf-api"
repository = "https://github.com/ico-interactive/fnaf-api"

[dependencies]
ab_glyph = "0.2.32"
axum = "0.8.9"
image = "0.25.10"
imageproc = "0.27.0"
reqwest = "0.13.4"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
webp = "0.3.1"

# builds dependencies with the release profile
[profile.dev.package."*"]
opt-level = 3
